--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>이 사이트를 통해 Brain Rot 여부를 진단하고, 해결책을 찾아보세요.</p>
     </div>
     
-    <button class="diagnosis-btn" id="diagnosis-btn">🩺 진단하기</button>
+    <button class="diagnosis-btn" id="diagnosis-btn" href="diagnosis.html">🩺 진단하기</button>
     
     <script>
         document.addEventListener("scroll", function() {
