--- a/diagnosis.html
+++ b/diagnosis.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>여기가 진단창</h1>
+        <h1>여기가 진단창입니다</h1>
         <img src="images/blue_color_brain.jpg" alt="뇌 이미지">
     </div>
 </body>
