--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             let clientHeight = document.documentElement.clientHeight;
             
             if (scrollTop + clientHeight >= scrollHeight - 50) {
-                document.getElementById("diagnosis-btn").style.display = "block";
+                document.getElementById("diagnosis-btn").styl = "block";
             }
         });
         document.addEventListener("DOMContentLoaded", function() {
