--- a/result.html
+++ b/result.html
@@ -92,7 +92,7 @@
     </div>
     
     <div class="footer">
-        <p>설계자 정보: 조용현 | 문의: 010-2759-8466 | 이메일: taeokyoon@kyonggi.ac.kr</p>
+        <p>설계자 정보: 조용현 | 문의: 010-2759-8466 | 이메일: whdydgus2001@kyonggi.ac.kr</p>
     </div>
 
     <script>
