--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="container section" id="info">
       <h2>📌 Brain Rot의 원인</h2>
-      <img src="images/breathe.jpg" alt="Brain Rot의 원인" />
+      <img src="images/causes.jpg" alt="Brain Rot의 원인" />
       <p>
         과도한 SNS 사용, 짧은 영상 콘텐츠 소비, 반복적인 정보 노출 등이 주요
         원인입니다.
