번호 이름 수정 index 수정본 적용완

--- a/result.html
+++ b/result.html
@@ -93,8 +93,8 @@
 
     <div class="footer">
       <p>
-        설계자 정보:유서진 | 문의: 010-2328-3149 | 이메일:
-        dbtjwls0112@kyonggi.ac.kr
+        설계자 정보 : 김다희  | 문의: 010-5108-8036 | 이메일:
+        kimdh8036@naver.com
       </p>
     </div>
 
