--- a/result.html
+++ b/result.html
@@ -93,7 +93,7 @@
 
     <div class="footer">
       <p>
-        설계자 정보 : 김다희  | 문의: 010-5108-8036 | 이메일:
+        설계자 정보 : 조용현 테슽  | 문의: 010-5108-8466 | 이메일:
         kimdh8036@naver.com
       </p>
     </div>
