brain rot -> brain rot !!!

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>🧠Brain rot</h1>
+      <h1>🧠Brain rot !!!!!</h1>
       <img src="images/blue_color_brain.jpg" alt="뇌 이미지" />
       <p>
         Brain Rot은 정보 과부하와 과도한 미디어 소비로 인해 집중력이 저하되고
